--- a/css/booking.css
+++ b/css/booking.css
@@ -119,7 +119,8 @@
 }
 
 .service-card.selected i,
-.service-card.selected .price {
+.service-card.selected .price,
+.service-card.selected p {
   color: white;
 }
 
